[GTK] FrameLoader signals: gtk-doc fixes https://bugs.webkit.org/show_bug.cgi?id=79495

Patch by Philippe Normand <pnormand@igalia.com> on 2012-03-06
Reviewed by Martin Robinson.

* webkit/webkitwebframe.cpp:
(webkit_web_frame_class_init):
* webkit/webkitwebresource.cpp:
(webkit_web_resource_class_init):
* webkit/webkitwebview.cpp:
(webkit_web_view_class_init):

Canonical link: https://commits.webkit.org/97617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109997 268f45cc-cd09-0410-ab3c-d52691b4dbfc